[project]
name = "api-sound"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "LNOI", email = "thanhloidev@gmail.com" }
]
dependencies = [
    "huggingsound>=0.1.6",
    "setuptools>=75.3.0",
    "fastapi>=0.115.8",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.33.0",
    "python-multipart>=0.0.20",
    "loguru>=0.7.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/api_sound"]
